--- a/index.html
+++ b/index.html
@@ -24,6 +24,61 @@
         <div class="picture">
             <img src="/assets/image/pantera.jpg" alt="">
         </div><!--picture-->
+        <div class="desc-picture">
+            <p>O nosso eterno Pantera Negra</p>
+        </div><!--desc-picture-->
     </section><!--main-->
+
+    <section class="section-2">
+        <div class="icon">
+            <img src="/assets/image/pantera_icon-removebg-preview.png" alt="">
+        </div><!--icon-->
+
+        <div class="bio">
+            <div class="title-info">
+                <h1>As informações do Chadwick Boseman</h1>
+            </div><!--title-info-->
+            <ul>
+                <li></li>
+            </ul>
+            <div class="box-group">
+                <div class="box">
+                    <h1>Carreira</h1>
+                    <p>Boseman obteve seu primeiro papel de televisão em 2003, em um episódio de Third Watch. 
+                        Seu trabalho inicial incluiu episódios das séries Law & Order, CSI: NY e ER.
+                         Ele também continuou a escrever peças, 
+                         com seu roteiro para Deep Azure realizado na Congo Square Theatre Company em Chicago, Illinois;
+                          foi nomeado para o Prêmio Joseph Jefferson de 2006 para novos trabalhos. 
+                          Em 2008, desempenhou um papel recorrente na série de televisão Lincoln Heights e apareceu em seu primeiro longa-metragem, The Express. 
+                        Ele conseguiu um papel regular em 2010 em outra série de televisão, Persons Unknown.</p>
+                </div><!--box-->
+                <div class="box">
+                    <h1>Vida pessoal</h1><!--box-->
+                <p>
+                    Boseman foi criado cristão.
+                     Ele foi batizado e fazia parte de um coro da igreja e grupo juvenil.
+                      Seu ex-pastor disse que ele ainda mantinha sua fé. 
+                      Boseman afirmou que ele rezou para ser o Pantera Negra antes de ser confirmado como a personagem no Universo Cinematográfico Marvel.
+                    Em outubro de 2019,
+                     Boseman se casou em segredo com a cantora Taylor Simone Ledward. 
+                     Os dois já vinham se relacionando desde 2015.
+                </p>
+                </div><!--box-->
+                <div class="box">
+                    <h1>Morte</h1>
+                    <p>
+                        Chadwick Boseman morreu no dia 28 de agosto de 2020 em sua casa na região de Los Angeles devido a complicações relacionadas a um câncer colorretal. 
+                        Ele lutava contra o câncer desde 2016 e, desse ano para cá, o câncer evoluiu para o estágio 4. A morte foi confirmada pela família do ator.
+                         O falecimento de Boseman pegou seus fãs de surpresa, uma vez que o ator jamais revelou que estava doente,
+                         embora já houvessem suspeitas anteriores sobre o seu estado de saúde.
+                    </p>
+                </div><!--box-->
+            </div><!--box-group-->
+        </div><!--Bio-->
+    </section><!--section2-->
+
+    <footer>
+        <p>feito por Julio Santana</p>
+    </footer>
 </body>
 </html>
